JBTM-3670 Make the quickstarts work with JDK17
removing redundant version declaration

adding comment for dependency javassist version upgrade

moving properties to root pom

removing profile, now minimum jdk is 11

replace version.naraynana property with project.version

--- a/ArjunaCore/txoj/pom.xml
+++ b/ArjunaCore/txoj/pom.xml
@@ -23,11 +23,7 @@
   <packaging>jar</packaging>
   <name>TXOJ example</name>
   <description>TXOJ example</description>
-  <properties>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <version.junit>4.13.1</version.junit>
-    <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
-  </properties>
+
   <build>
     <plugins>
       <!-- This plugin allows our example to be executed by maven -->
@@ -56,7 +52,7 @@
     <dependency>
       <groupId>org.jboss.narayana.arjunacore</groupId>
       <artifactId>arjunacore</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -98,7 +94,7 @@
                   <executable>bash</executable>
                   <commandlineArgs>${basedir}/run.sh</commandlineArgs>
                   <environmentVariables>
-                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                    <QUICKSTART_NARAYANA_VERSION>${project.version}</QUICKSTART_NARAYANA_VERSION>
                   </environmentVariables>
                 </configuration>
               </execution>
@@ -131,7 +127,7 @@
                      <exec dir="${project.basedir}" executable="cmd" failonerror="true">
                        <arg value="/c"/>
                        <arg value="run.bat"/>
-                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${project.version}" />
                      </exec>
                    </target>
                  </configuration>
