--- a/ArjunaCore/pom.xml
+++ b/ArjunaCore/pom.xml
@@ -22,16 +22,16 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>narayana-quickstarts-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart</groupId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.arjunacore</groupId>
   <artifactId>narayana-quickstarts-core</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss Core Examples</name>
   <description>All quickstarts of JBoss Core</description>
-  <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
   <repositories>
     <repository>
       <id>jboss-public-repository-group</id>
