--- a/ArjunaJTA/jee_transactional_app/pom.xml
+++ b/ArjunaJTA/jee_transactional_app/pom.xml
@@ -23,33 +23,7 @@
     <name>basic integration example</name>
     <description>basic integration example</description>
     <packaging>war</packaging>
-    <properties>
-        <!-- Explicitly declaring the source encoding eliminates the following 
-            message: -->
-        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-            resources, i.e. build is platform dependent! -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Define the version of the JBoss BOMs we want to import. The 
-            JBoss BOMs specify tested stacks. -->
-        <version.org.jboss.bom>1.0.0.Final</version.org.jboss.bom>
-        <!-- Alternatively, comment out the above line, and un-comment the 
-            line below to use version 1.0.0.Final-redhat-1 which is a release certified 
-            to work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 
-            maven repository. -->
-        <!-- <version.org.jboss.bom>1.0.0.Final-redhat-1</version.org.jboss.bom>> -->
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-        <!-- wildfly dependencies -->
-        <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
-        <version.junit>4.13.1</version.junit>
-        <version.org.wildfly.arquillian>2.1.1.Final</version.org.wildfly.arquillian>
-        <!-- other plugin versions -->
-        <version.compiler.plugin>3.5.1</version.compiler.plugin>
-        <version.surefire.plugin>2.19.1</version.surefire.plugin>
-        <version.war.plugin>2.6</version.war.plugin>
-        <!-- maven-compiler-plugin -->
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-    </properties>
+
     <repositories>
         <repository>
             <id>jboss-public-repository-group</id>
@@ -88,20 +62,6 @@
                 <version>2.6</version>
                 <configuration>
                     <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <archive>
-                        <manifestEntries>
-                            <Dependencies>org.jboss.jts</Dependencies>
-                        </manifestEntries>
-                    </archive>
                 </configuration>
             </plugin>
             <!-- WildFly plugin to deploy war as a convenience -->
@@ -189,7 +149,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- Import the injection annotations -->
