--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -22,9 +22,13 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>narayana-quickstarts-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart</groupId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.jta</groupId>
   <artifactId>narayana-quickstarts-jta</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss JTA Examples</name>
   <description>All quickstarts of JBoss JTA</description>
@@ -41,12 +45,7 @@
       </snapshots>
     </repository>
   </repositories>
-  <properties>
-    <version.surefire.plugin>2.19.1</version.surefire.plugin>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <version.junit>4.13.1</version.junit>
-    <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
-  </properties>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -127,7 +126,7 @@
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
        <groupId>org.wildfly.core</groupId>
