--- a/ArjunaJTS/interop/pom.xml
+++ b/ArjunaJTS/interop/pom.xml
@@ -17,18 +17,16 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jboss.narayana.quickstart.jts</groupId>
+    <artifactId>narayana-quickstarts-jts</artifactId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>jts-interop-quickstart</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <name>JTS Interoperability Quickstart Parent pom</name>
   <description>Transactional EJB calls between GlassFish and WildFly</description>
   <packaging>pom</packaging>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-  </properties>
 
   <licenses>
     <license> 
