--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -22,9 +22,13 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>narayana-quickstarts-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart</groupId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>narayana-quickstarts-jts</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JTS Examples</name>
   <description>All quickstarts of JTS</description>
@@ -42,9 +46,6 @@
     </repository>
   </repositories>
   <properties>
-    <version.surefire.plugin>2.19.1</version.surefire.plugin>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <version.junit>4.13.1</version.junit>
     <version.transaction.api_1_1>1.0.0.Final</version.transaction.api_1_1>
   </properties>
   <build>
