--- a/ArjunaJTS/standalone/pom.xml
+++ b/ArjunaJTS/standalone/pom.xml
@@ -19,9 +19,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.jboss.narayana.quickstart.jts</groupId>
+    <artifactId>narayana-quickstarts-jts</artifactId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>jts-standalone</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Standalone JTS Transaction Example</name>
   <description>Standalone JTS Transaction Example</description>
@@ -33,12 +37,6 @@
       <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
     </license>
   </licenses>
-
-  <properties>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
 
   <repositories>
     <repository>
@@ -68,7 +66,7 @@
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
@@ -80,7 +78,7 @@
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>narayana-jts-idlj</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.openjdk-orb</groupId>
@@ -116,7 +114,7 @@
                   <systemProperties>
                     <systemProperty>
                       <key>QUICKSTART_NARAYANA_VERSION</key>
-                      <value>${version.narayana}</value>
+                      <value>${project.version}</value>
                     </systemProperty>
                   </systemProperties>
                 </configuration>
@@ -153,7 +151,7 @@
                   <executable>bash</executable>
                   <commandlineArgs>${basedir}/run.sh</commandlineArgs>
                   <environmentVariables>
-                    <QUICKSTART_NARAYANA_VERSION>${version.narayana}</QUICKSTART_NARAYANA_VERSION>
+                    <QUICKSTART_NARAYANA_VERSION>${project.version}</QUICKSTART_NARAYANA_VERSION>
                   </environmentVariables>
                 </configuration>
               </execution>
@@ -186,7 +184,7 @@
                      <exec dir="${project.basedir}" executable="cmd.exe" failonerror="true">
                        <arg value="/c"/>
                        <arg value="run.bat"/>
-                       <env key="QUICKSTART_NARAYANA_VERSION" value="${version.narayana}" />
+                       <env key="QUICKSTART_NARAYANA_VERSION" value="${project.version}" />
                      </exec>
                    </target>
                  </configuration>
