--- a/STM/jta/pom.xml
+++ b/STM/jta/pom.xml
@@ -14,15 +14,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+    <parent>
+      <artifactId>stm-all</artifactId>
+      <groupId>org.jboss.narayana.quickstart.stm</groupId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
 	<groupId>org.jboss.narayana.quickstart.stm</groupId>
 	<artifactId>stm-jta</artifactId>
-	<version>5.13.1.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<properties>
-		<version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-	</properties>
 	<repositories>
 		<repository>
 			<id>jboss-public-repository-group</id>
@@ -89,12 +88,12 @@
 		<dependency>
 			<groupId>org.jboss.narayana.jta</groupId>
 			<artifactId>narayana-jta</artifactId>
-                        <version>${version.narayana}</version>
+                        <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.narayana.stm</groupId>
 			<artifactId>stm</artifactId>
-                        <version>${version.narayana}</version>
+                        <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
