--- a/agroal/pom.xml
+++ b/agroal/pom.xml
@@ -6,19 +6,6 @@
     <artifactId>agoral</artifactId>
     <version>5.13.1.Final-SNAPSHOT</version>
 
-    <properties>
-        <version.agroal>1.3</version.agroal>
-        <version.byteman>4.0.4</version.byteman>
-        <version.h2>2.1.210</version.h2>
-        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <version.junit>4.13.1</version.junit>
-        <version.jta.api>1.0.0.Final</version.jta.api>
-        <version.narayana>5.9.0.Final</version.narayana>
-
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
           <groupId>org.jboss.spec.javax.transaction</groupId>
@@ -28,12 +15,12 @@
         <dependency>
           <groupId>org.jboss.narayana.jta</groupId>
           <artifactId>narayana-jta</artifactId>
-          <version>${version.narayana}</version>
+          <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
           <artifactId>narayana-jts-integration</artifactId>
-          <version>${version.narayana}</version>
+          <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
