--- a/atsintegration/pom.xml
+++ b/atsintegration/pom.xml
@@ -22,21 +22,16 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>narayana-quickstarts-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart</groupId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart</groupId>
   <artifactId>application-server-integration</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>narayana application server intergration</name>
   <description>Example of possible integration of Narayana to an arbitrary application server</description>
-
-  <properties>
-    <version.jboss.logging>3.1.0.GA</version.jboss.logging>
-    <version.junit>4.13.1</version.junit>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <version.transaction.api>1.0.1.Final</version.transaction.api>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -47,12 +42,12 @@
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>narayana-jts-integration</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
