--- a/jca-and-hibernate/pom.xml
+++ b/jca-and-hibernate/pom.xml
@@ -24,44 +24,22 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>narayana-quickstarts-all</artifactId>
+        <groupId>org.jboss.narayana.quickstart</groupId>
+        <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>jca-and-hibernate</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
 
     <name>Narayana Quickstarts: JBTM, IronJacamar, and Hibernate</name>
     <description>JBTM, IronJacamar and Hibernate example</description>
 
     <url>http://jboss.org/jbosstm</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
-        <version.org.jboss.ironjacamar>1.4.22.Final</version.org.jboss.ironjacamar>
-        <version.com.github.fungal>0.11.0.Final</version.com.github.fungal>
-        <version.hibernate>5.4.24.Final</version.hibernate>
-        <version.hibernate.hibernate-validator>6.1.5.Final</version.hibernate.hibernate-validator>
-        <version.javax.el>3.0.1-b11</version.javax.el>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <version.jboss.logging.spi>2.2.0.CR1</version.jboss.logging.spi>
-        <version.org.jboss.logmanager-jboss-logmanager>1.4.0.Final</version.org.jboss.logmanager-jboss-logmanager>
-        <version.org.jboss.logmanager-log4j-jboss-logmanager>1.0.1.Final</version.org.jboss.logmanager-log4j-jboss-logmanager>
-        <version.org.jboss.stdio>1.0.1.GA</version.org.jboss.stdio>
-        <version.org.jboss.threads>2.0.0.GA</version.org.jboss.threads>
-        <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
-        <version.org.jboss.naming>5.0.3.GA</version.org.jboss.naming>
-        <version.org.jboss.shrinkwrap>1.0.1</version.org.jboss.shrinkwrap>
-        <version.org.jboss.shrinkwrap.descriptors>2.0.0-alpha-5</version.org.jboss.shrinkwrap.descriptors>
-        <version.org.jboss.spec.javax.transaction>1.0.1.Final</version.org.jboss.spec.javax.transaction>
-        <version.javax.validation>2.0.1.Final</version.javax.validation>
-        <version.postgresql>9.1-901.jdbc4</version.postgresql>
-        <version.commons-logging>1.1.0.jboss</version.commons-logging>
-        <version.h2>2.1.210</version.h2>
-        <version.junit>4.13.1</version.junit>
-    </properties>
-
+	<properties>
+		<version.javax.el>3.0.1-b11</version.javax.el>
+	</properties>
     <repositories>
         <repository>
             <id>projet-local</id>
@@ -103,7 +81,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${version.hibernate.hibernate-validator}</version>
+            <version>${version.hibernate.validator}</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -279,12 +257,12 @@
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-integration</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
