--- a/jta-1_2-standalone/pom.xml
+++ b/jta-1_2-standalone/pom.xml
@@ -24,27 +24,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>narayana-quickstarts-all</artifactId>
+        <groupId>org.jboss.narayana.quickstart</groupId>
+        <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
     <artifactId>jta-1_2-standalone</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
 
     <name>Narayana Quickstart: Standalone JTA 1.2 Quickstart</name>
     <description>Example shows how to use JTA 1.2 annotations in standalone application</description>
 
     <url>http://narayana.io</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-
-        <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-        <version.jnpserver>5.0.3.GA</version.jnpserver>
-        <version.junit>4.13.1</version.junit>
-        <version.weld>3.1.0.Final</version.weld>
-        <version.jboss-transaction-api>1.1.1.Final</version.jboss-transaction-api>
-    </properties>
 
     <repositories>
         <repository>
@@ -69,7 +60,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>org.jboss.spec.javax.transaction</groupId>
