--- a/jts-docker/pom.xml
+++ b/jts-docker/pom.xml
@@ -25,21 +25,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>narayana-quickstarts-all</artifactId>
+        <groupId>org.jboss.narayana.quickstart</groupId>
+        <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.docker</groupId>
     <artifactId>jts-docker</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.surefire.plugin>2.19.1</version.surefire.plugin>
-        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <version.jacorb>2.3.1jboss.patch01-brew</version.jacorb>
-        <version.org.slf4j>1.7.2</version.org.slf4j>
-        <version.junit>4.13.1</version.junit>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
     <repositories>
         <repository>
@@ -60,7 +52,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-idlj</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
