--- a/rts/at/demo/pom.xml
+++ b/rts/at/demo/pom.xml
@@ -32,13 +32,6 @@
   <name>RESTAT Quickstart: Demonstration of Participant Service with Recovery</name>
   <description>Example of how a web service can recover from failures during transaction completion</description>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <version.wildfly-maven-plugin>1.1.0.Alpha10</version.wildfly-maven-plugin>
-  </properties>
-
   <repositories>
     <!-- Jersey -->
     <repository>
@@ -72,12 +65,7 @@
       <plugin>
           <groupId>org.wildfly.plugins</groupId>
           <artifactId>wildfly-maven-plugin</artifactId>
-          <version>${version.wildfly-maven-plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.1.1</version>
+          <version>${version.wildfly.plugin}</version>
       </plugin>
     </plugins>
   </build>
@@ -86,7 +74,7 @@
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>restat-api</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- Jersey container for running participant services -->
     <dependency>
