--- a/rts/at/jta-service/jms/pom.xml
+++ b/rts/at/jta-service/jms/pom.xml
@@ -37,18 +37,6 @@
     <name>REST-AT to JTA Bridge Quickstart: JMS</name>
     <description>Basic example how to use JMS within RESTful transaction</description>
 
-    <properties>
-      <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1]
-        -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true
-      </ipv6.server.jvm.args>
-      <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxMetaspaceSize=512m</jvm.args.memory>
-      <jvm.args.debug></jvm.args.debug>
-      <jvm.args.other>-server</jvm.args.other>
-      <version.surefire.plugin>2.19.1</version.surefire.plugin>
-      <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-      <version.javax.annotation.api>1.3.2</version.javax.annotation.api>
-    </properties>
-
     <repositories>
         <repository>
             <id>jboss-public-repository-group</id>
@@ -99,7 +87,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
