--- a/rts/at/recovery/pom.xml
+++ b/rts/at/recovery/pom.xml
@@ -17,16 +17,16 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jboss.narayana.quickstart.rts</groupId>
+    <artifactId>restat-quickstarts</artifactId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>recovery-quickstarts</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <name>RESTAT Recovery Quickstarts</name>
   <description>Provides examples of how recoverable REST based transactional services</description>
   <packaging>pom</packaging>
-  <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
   <modules>
     <module>recovery1</module>
     <module>recovery2</module>
