--- a/rts/at/recovery/recovery1/pom.xml
+++ b/rts/at/recovery/recovery1/pom.xml
@@ -32,12 +32,6 @@
     <name>RESTAT Quickstart: Participant Service with Recovery</name>
     <description>Example of how a web service can recover from failures during transaction completion</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    </properties>
-
     <repositories>
         <!-- Jersey -->
         <repository>
@@ -64,7 +58,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- include resteasy since it provide some utility methods for manipulating HTTP headers -->
         <dependency>
