--- a/rts/at/recovery/recovery2/pom.xml
+++ b/rts/at/recovery/recovery2/pom.xml
@@ -32,12 +32,6 @@
     <name>RESTAT Quickstart: Participant Service with Recovery 2</name>
     <description>Example of how a web service can recover from failures during transaction completion (using the integration API</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -78,19 +72,19 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-integration</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-idlj</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- RESTAT utils -->
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
