--- a/rts/at/service/service1/pom.xml
+++ b/rts/at/service/service1/pom.xml
@@ -32,12 +32,6 @@
     <name>RESTAT Quickstart: Participant Service</name>
     <description>Example shows how a web service can participate in a transaction</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    </properties>
-
     <repositories>
         <!-- Jersey -->
         <repository>
@@ -71,7 +65,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
