--- a/rts/at/service/service2/pom.xml
+++ b/rts/at/service/service2/pom.xml
@@ -32,12 +32,6 @@
     <name>RESTAT Quickstart: Participant Service</name>
     <description>Example shows how a web service can participate in a transaction</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    </properties>
-
     <repositories>
         <!-- Jersey -->
         <repository>
@@ -99,12 +93,12 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-integration</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-idlj</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- JBoss logging -->
         <dependency>
@@ -116,7 +110,7 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- Jersey container for running participant services -->
         <dependency>
