--- a/rts/at/service/service2b/pom.xml
+++ b/rts/at/service/service2b/pom.xml
@@ -59,34 +59,6 @@
         </repository>
     </repositories>
 
-    <properties>
-        <!-- Explicitly declaring the source encoding eliminates the following message: -->
-        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-            resources, i.e. build is platform dependent! -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <!-- JBoss dependency versions -->
-
-        <version.wildfly-maven-plugin>1.1.0.Alpha10</version.wildfly-maven-plugin>
-
-        <version.jboss.spec.javaee.6.0>3.0.2.Final</version.jboss.spec.javaee.6.0>
-        <!-- Alternatively, comment out the above line, and un-comment the 
-            line below to use version 3.0.2.Final-redhat-2 which is a release certified 
-            to work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 
-            maven repository. -->
-        <!-- <version.jboss.spec.javaee.6.0>3.0.2.Final-redhat-2</version.jboss.spec.javaee.6.0> -->
-
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-
-        <!-- other plugin versions -->
-        <version.compiler.plugin>3.5.1</version.compiler.plugin>
-        <version.war.plugin>2.6</version.war.plugin>
-
-        <!-- maven-compiler-plugin -->
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
-    </properties>
-
     <dependencyManagement>
         <dependencies>
             <!-- Define the version of JBoss' Java EE 6 APIs we want to import. 
@@ -114,20 +86,20 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-integration</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.jts</groupId>
             <artifactId>narayana-jts-idlj</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- REST-AT helper -->
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -170,7 +142,7 @@
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
-                <version>${version.wildfly-maven-plugin}</version>
+                <version>${version.wildfly.plugin}</version>
             </plugin>
 
             <!-- Compiler plugin enforces Java 1.6 compatibility and activates 
@@ -194,7 +166,7 @@
                 <dependency>
                     <groupId>org.jboss.narayana.rts</groupId>
                     <artifactId>restat-util</artifactId>
-                    <version>${version.narayana}</version>
+                    <version>${project.version}</version>
                 </dependency>
             </dependencies>
             <build>
