--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -17,19 +17,15 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jboss.narayana.quickstart.rts</groupId>
+    <artifactId>restat-quickstarts</artifactId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>simple</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <name>RESTAT Quickstart: Basic</name>
   <description>Basic example of how to start and stop a REST Atomic transaction</description>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-    <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
 
     <repositories>
         <repository>
@@ -83,7 +79,7 @@
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>restat-util</artifactId>
-      <version>${version.narayana}</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- include resteasy since it provide some utility methods for manipulating HTTP headers -->
     <dependency>
