--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -17,22 +17,17 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+      <groupId>org.jboss.narayana.quickstart.rts</groupId>
+      <artifactId>restat-quickstarts</artifactId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana</groupId>
     <artifactId>rts-undertow-qs</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
 
     <name>Narayana Quickstarts: REST-AT with undertow</name>
     <description>Narayana: rest-at with undertow quickstart</description>
     <packaging>jar</packaging>
-
-    <properties>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <undertow.io.version>2.2.19.Final</undertow.io.version>
-        <version.resteasy>3.0.23.Final</version.resteasy>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
     <repositories>
         <repository>
@@ -52,12 +47,12 @@
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-api</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
           <groupId>org.jboss.resteasy</groupId>
@@ -67,7 +62,7 @@
         <dependency>
             <groupId>org.jboss.narayana.arjunacore</groupId>
             <artifactId>arjunacore</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
