--- a/rts/lra-examples/cdi-participant/pom.xml
+++ b/rts/lra-examples/cdi-participant/pom.xml
@@ -3,20 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+      <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
+      <artifactId>lra-examples</artifactId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
-    <version>5.13.1.Final-SNAPSHOT</version>
     <artifactId>examples-microprofile-lra-cdi-participant</artifactId>
 
     <name>MicroProfile Examples: LRA CDI Participant</name>
     <description>MicroProfile Examples: LRA CDI participant using annotations</description>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.microprofile.lra>1.0</version.microprofile.lra>
-		<quarkus.platform.version>2.10.0.Final</quarkus.platform.version>
-		<quarkus-plugin.version>2.10.0.Final</quarkus-plugin.version>
-		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -65,7 +61,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire-plugin.version}</version>
+                <version>${version.surefire.plugin}</version>
                 <configuration>
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
