--- a/rts/lra-examples/lra-coordinator/pom.xml
+++ b/rts/lra-examples/lra-coordinator/pom.xml
@@ -3,20 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+      <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
+      <artifactId>lra-examples</artifactId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
-    <version>5.13.1.Final-SNAPSHOT</version>
     <artifactId>examples-microprofile-lra-coordinator</artifactId>
 
     <name>LRA Examples: LRA Coordinator</name>
     <description>LRA Examples: LRA Coordinator</description>
 
     <packaging>pom</packaging>
-
-    <properties>
-        <maven.test.skip>true</maven.test.skip>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.plugin.maven.dependency>2.3</version.plugin.maven.dependency>
-    </properties>
 
     <repositories>
         <repository>
