--- a/rts/lra-examples/lra-jwt/pom.xml
+++ b/rts/lra-examples/lra-jwt/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+      <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
+      <artifactId>lra-examples</artifactId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-jwt-examples</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
     <name>LRA JWT Quickstart Examples</name>
     <description>Provides examples of how to secure LRA endpoints using JWT security mechanism.</description>
     <packaging>pom</packaging>
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
     <modules>
         <module>wildfly</module>
