--- a/rts/lra-examples/pom.xml
+++ b/rts/lra-examples/pom.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jboss.narayana.quickstart.rts</groupId>
+    <artifactId>rts-quickstarts</artifactId>
+    <version>5.13.1.Final-SNAPSHOT</version>
+  </parent>
   <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
   <artifactId>lra-examples</artifactId>
-  <version>5.13.1.Final-SNAPSHOT</version>
   <name>LRA Quickstart Examples</name>
   <description>Provides examples of how to use transactions with microservices</description>
   <packaging>pom</packaging>
@@ -25,7 +29,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.0.0</version>
         <configuration>
           <skip>true</skip>
         </configuration>
