--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -18,17 +18,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+      <groupId>org.jboss.narayana.quickstart.rts</groupId>
+      <artifactId>rts-quickstarts</artifactId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.rts.lra</groupId>
     <artifactId>lra-quickstarts</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
     <name>LRA Quickstarts</name>
     <description>Provides examples of how to use transactions with web applications</description>
     <packaging>pom</packaging>
-
-    <properties>
-        <version.microprofile.lra>1.0-RC1</version.microprofile.lra>
-        <version.jackson>2.13.0</version.jackson>
-    </properties>
 
     <repositories>
         <repository>
