--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -23,10 +23,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+      <artifactId>narayana-quickstarts-all</artifactId>
+      <groupId>org.jboss.narayana.quickstart</groupId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstarts.spring</groupId>
     <artifactId>spring-all</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Narayana and Spring Quickstarts</name>
