--- a/transactionaldriver/transactionaldriver-standalone/pom.xml
+++ b/transactionaldriver/transactionaldriver-standalone/pom.xml
@@ -2,20 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+      <artifactId>transactionaldriver</artifactId>
+      <groupId>io.narayana</groupId>
+      <version>5.13.1.Final-SNAPSHOT</version>
+    </parent>
     <groupId>io.narayana</groupId>
     <artifactId>transactionaldriver-standalone</artifactId>
-    <version>5.13.1.Final-SNAPSHOT</version>
-
-    <properties>
-        <version.byteman>4.0.4</version.byteman>
-        <version.h2>2.1.210</version.h2>
-        <version.jboss.logging>3.1.4.GA</version.jboss.logging>
-        <version.junit>4.13.1</version.junit>
-        <version.narayana>5.13.1.Final-SNAPSHOT</version.narayana>
-
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -26,7 +19,7 @@
         <dependency>
           <groupId>org.jboss.narayana.jta</groupId>
           <artifactId>narayana-jta</artifactId>
-          <version>${version.narayana}</version>
+          <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
@@ -37,7 +30,7 @@
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>jdbc</artifactId>
-            <version>${version.narayana}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
